<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/default_padding"
        android:background="@android:color/black"
        tools:context=".fragment.CartFragment">

    <!--HEADER START-->
    <!-- TODO: Update blank fragment layout -->
    <com.google.android.material.appbar.AppBarLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:elevation="0dp"
            android:id="@+id/cart_appbarlayout"
            android:background="@android:color/transparent"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" >

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/cart_toolbar"
                android:layout_width="match_parent"
                app:elevation="0dp"
                android:layout_height="?attr/actionBarSize"
                android:background="@android:color/transparent"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                android:gravity="center_vertical">

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/cart_header_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cart_title"
                    android:textColor="@android:color/white"
                    android:layout_gravity="center"
                    android:fontFamily="@font/rubic"
                    android:background="@android:color/transparent"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

            <ImageButton
                    android:id="@+id/cart_header_close"
                    android:layout_marginHorizontal="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_close"
                    android:layout_gravity="right"
                    android:background="@android:color/transparent"/>


        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <!--Total Items count-->
    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/cart_count"
            android:text="@string/cart_count_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@android:color/white"
            android:fontFamily="@font/rubic"
            app:layout_constraintTop_toBottomOf="@+id/cart_appbarlayout"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
    <View
            android:id="@+id/cart_header_divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginVertical="@dimen/small_margin"
            android:background="@android:color/white"
            app:layout_constraintTop_toBottomOf="@+id/cart_count"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    <!--HEADER END-->

    <!--CONTENT START-->
    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/cart_items_recycler_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginVertical="@dimen/small_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cart_header_divider"
            app:layout_constraintBottom_toTopOf="@+id/cart_footer_divider"/>

    <!-- CONTENT END-->

    <!--FOOTER START-->
    <!--Footer Divider-->
    <View
            android:id="@+id/cart_footer_divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginVertical="@dimen/small_margin"
            android:background="@android:color/white"
            app:layout_constraintBottom_toTopOf="@+id/cart_total_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    <!--Total layout-->
    <LinearLayout
            android:id="@+id/cart_total_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/cart_checkout">

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/cart_total"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="start"
                android:textColor="@android:color/white"
                android:text="@string/cart_total_label"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/cart_total_value"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textColor="@android:color/white"
                android:gravity="end"
                android:textStyle="bold"
                android:text="@string/cart_total_value"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

    </LinearLayout>
    <!--Checkout Button-->
    <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimary"
            android:text="@string/cart_checkout_button"
            android:fontFamily="@font/rubic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:id="@+id/cart_checkout"/>
    <!--FOOTER END-->

</androidx.constraintlayout.widget.ConstraintLayout>